--- a/Client/index.html
+++ b/Client/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Room Rental System</title>
     <style>
@@ -10,6 +16,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        font-family: "Roboto", sans-serif;
       }
     </style>
   </head>
