Footer page created

--- a/Client/index.html
+++ b/Client/index.html
@@ -9,14 +9,21 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Room Rental System</title>
     <style>
       * {
         margin: 0;
         padding: 0;
-        box-sizing: border-box;
-        font-family: "Roboto", sans-serif;
+        font-family: "Poppins", sans-serif;
+        font-weight: 300;
+        font-style: normal;
       }
     </style>
   </head>
